<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:keepScreenOn="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <Button
        android:id="@+id/forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forward"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/backward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backward"
        android:layout_below="@+id/right"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" />

    <Button
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"
        android:layout_marginLeft="38dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right"
        android:layout_marginRight="40dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Right Test"
        android:id="@+id/right_test_btn"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Left Test"
        android:id="@+id/left_test_btn"
        android:layout_alignBottom="@+id/forward"
        android:layout_alignParentLeft="true" />

</RelativeLayout>
